minitrace-macro/tests/ui/err/has-too-many-arguments.stderr
error: expected string literal
 --> tests/ui/err/has-too-many-arguments.rs:3:9
  |
3 | #[trace(a, b)]
  |         ^
